# datagen

./: README.md  pyproject.toml
src/datagen/: __main__.py  argparser.py  configuration.py  datagenerator.py  default.ini  filesgenerator.py  logger.py  schema.json  utils.py
tests/: test_argparser.py  test_datagenerator.py  test_filegenerator.py  test_utils.py
